--- a/src/main_analysis_cortical_areas.Rmd
+++ b/src/main_analysis_cortical_areas.Rmd
@@ -35,7 +35,7 @@ get_combined_central <- function(aal) {
 
 get_main_areas <- function(aal, areas) {
   # Init a matrix to store tallies of areas labeled
-  tallies = matrix(0, 128, 8) 
+  tallies = matrix(0, 128, 9) 
   colnames(tallies) <- areas
   
   # Tally
@@ -44,7 +44,10 @@ get_main_areas <- function(aal, areas) {
       main_area <- sub("\\_.*", "", aal[[i]][j])
       tallies[i, grep(main_area, areas)] <- tallies[i, grep(main_area, areas)] + 1
     }
+    if (sum(tallies[i,]) == 0) {tallies[i, 9] <- 1} # Label other
+    # if (sum(tallies[i,] > 0) == 1) {tallies[i, which(tallies[i,] > 1)] <- 1} # Remove midnight
   }
+
   return(as.data.frame(tallies))
 }
 ```
@@ -52,7 +55,7 @@ get_main_areas <- function(aal, areas) {
 ```{r identify main cortical areas}
 # Basic graph features
 channels <- as.character(1:128)
-areas <- c("Temporal", "Frontal", "Occipital", "Supp", "Central", "SupraMarginal", "Angular", "Parietal")
+areas <- c("Frontal", "Temporal", "Occipital", "Supp", "Central", "SupraMarginal", "Angular", "Parietal", "Other")
 
 # Load and clean data
 load("/Applications/eeglab2019/talker-change-data-processing/data/aggregate/mni_coordinates_areas_aal.Rdata")
@@ -63,15 +66,11 @@ aal_reduced <- get_main_areas(aal_cleaned, areas)
 layout <- get_layout()
 df <- cbind(channels, layout, aal_reduced)
 
-# Create a custom color scale
-myColors <- c("#2c8497", "#2c4f97", "#3f2c97", "#752c97", "#972c84", "#972c4f", "#97452c", "#97702c")
-names(myColors) <- levels(df$groups)
-
+# Plot
 ggplot() +
   geom_scatterpie(data = df, cols = areas, aes(x = x, y = y)) +
   coord_equal() +
-  geom_text(data = df, aes(x = x, y = y, label = channels), vjust = -1.2, size= 3) +
-  scale_color_manual(name = "Region", values = myColors) +
+  geom_text(data = df, aes(x = x, y = y, label = channels), vjust = -1.3, size = 2.5) +
   ylim(0, 900) +
   xlim(0, 900) +
   theme(axis.line=element_blank(),axis.text.x=element_blank(),
@@ -83,9 +82,5 @@ ggplot() +
         panel.grid.major=element_blank(),
         panel.grid.minor=element_blank(),
         plot.background=element_blank())
-
-# add other
-# remove midnight
-
 ```
 
