--- a/src/main_analysis_formants.Rmd
+++ b/src/main_analysis_formants.Rmd
@@ -7,229 +7,26 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(
-  echo = FALSE,
-  warning = FALSE
-) 
 require("knitr")
 library("dplyr")
-source("main_analysis_functions.R")
+setwd('~/src/talker_change_data_processing')
+source("src/main_analysis_functions.R")
+knitr::opts_chunk$set(
+  echo = FALSE,
+  warning = FALSE,
+  root.dir = '~/src/talker_change_data_processing'
+) 
 ```
 
-
-
-******
-
-#### 1. Do cortical regions track temporal variation in the speech signal?
-
-``` {r}
+``` {r load_files}
 # Read files
-setwd("~/talker_change_data_processing") # Set root dir
-xcorr <- load_data("xcorr")
+setwd('~/src/talker_change_data_processing')
 xcorr_formants <- load_data("xcorr", formants = TRUE)
 
 # Save channel numbers
 channels <- as.character(1:128)
 channel_columns <- paste("X", 1:128, sep = "")
 ```
-
-``` {r}
-# One-sample t-test for the cross-correlation values for each channel
-t_xcorr <- get_one_sample_t(select(xcorr, all_of(channel_columns)))
-# One-sample t-test for the convolution values for each channel
-t_conv <- get_one_sample_t(select(conv, all_of(channel_columns)))
-# Create a frequency table with the results
-get_combined_frequency_table(t_xcorr, t_conv, title = "Table 1. Channels significantly tracking the stimuli")
-```
-
-**Output 1. Channels with significant cross-correlation with stimulus waveform ($\alpha$ < 0.1)** Computed with a one-sample t-test for the cross-correlation of each stimulus waveform with each electrode EEG trace across all conditions.
-
-```{r}
-# Printing the t-test results for significant electrodes
-t_xcorr[which(t_xcorr$p < 0.1),]
-```
-
-**Output 2. Channels with significant convolution with stimulus waveform ($\alpha$ < 0.1)** Computed with a one-sample t-test for the convolution of each stimulus waveform with each electrode EEG trace across all conditions.
-
-```{r}
-# Printing the t-test results for significant electrodes
-t_conv[which(t_conv$p < 0.1),]
-```
-
-
-
-
-************
-
-#### 2. Do cortical regions track differently depending on the conditions?
-
-Tested by one-sample t-tests for significant waveform tracking in each level of each condition.
-
-**Channels significantly tracking the stimuli in the talker condition ($\alpha$ < 0.1)** 
-
-```{r}
-# One-sample t-tests over each electrode for the same talker condition
-t_xcorr_talker_s <- get_one_sample_t(subset(xcorr, condition = "talker", level = "S"))
-t_conv_talker_s <- get_one_sample_t(subset(conv, condition = "talker", level = "S"))
-get_combined_frequency_table(t_xcorr_talker_s, t_conv_talker_s, title = "Table 2. Same talker")
-
-# One-sample t-tests over each electrode for the different talker condition
-t_xcorr_talker_t <- get_one_sample_t(subset(xcorr, condition = "talker", level = "T"))
-t_conv_talker_t <- get_one_sample_t(subset(conv, condition = "talker", level = "T"))
-get_combined_frequency_table(t_xcorr_talker_t, t_conv_talker_t, title = "Table 3. Different talker")
-```
-
-**Channels significantly tracking the stimuli in the meaning condition ($\alpha$ < 0.1)** 
-
-```{r}
-# One-sample t-tests over each electrode for the meaning condition
-t_xcorr_meaning_m <- get_one_sample_t(subset(xcorr, condition = "meaning", level = "M"))
-t_conv_meaning_m <- get_one_sample_t(subset(conv, condition = "meaning", level = "M"))
-get_combined_frequency_table(t_xcorr_meaning_m, t_conv_meaning_m, title = "Table 4. Meaningful")
-
-# One-sample t-tests over each electrode for the nonsense condition
-t_xcorr_meaning_n <- get_one_sample_t(subset(xcorr, condition = "meaning", level = "N"))
-t_conv_meaning_n <- get_one_sample_t(subset(conv, condition = "meaning", level = "N"))
-get_combined_frequency_table(t_xcorr_meaning_n, t_conv_meaning_n, title = "Table 5. Nonsense")
-```
-
-**Channels significantly tracking the stimuli in the constraint condition ($\alpha$ < 0.1)** 
-
-```{r}
-# One-sample t-tests over each electrode for the high constraint condition
-t_xcorr_constraint_s <- get_one_sample_t(subset(xcorr, condition = "constraint", level = "S"))
-t_conv_constraint_s <- get_one_sample_t(subset(conv, condition = "constraint", level = "S"))
-get_combined_frequency_table(t_xcorr_constraint_s, t_conv_constraint_s, title = "Table 6. High constraint")
-
-# One-sample t-tests over each electrode for the low constraint condition
-t_xcorr_constraint_g <- get_one_sample_t(subset(xcorr, condition = "constraint", level = "G"))
-t_conv_constraint_g <-get_one_sample_t(subset(conv, condition = "constraint", level = "G"))
-get_combined_frequency_table(t_xcorr_constraint_g, t_conv_constraint_g, title = "Table 7. Low constraint")
-```
-
-
-
-
-************
-
-#### 3. Do cortical regions track the levels of each condition differently?
-
-Tested by paired-samples t-tests between the two levels of each condition. I.e. a test of whether an electrode significantly distinguishes condition levels.
-
-**Channels significantly distinguishing the stimuli in each condition ($\alpha$ < 0.1)** 
-
-```{r}
-# Paired t-tests for talker
-t_xcorr_talker_paired <- get_paired_samples_t(subset(xcorr, condition = "talker", level = "S"),
-                                              subset(xcorr, condition = "talker", level = "T"))
-t_conv_talker_paired <- get_paired_samples_t(subset(conv, condition = "talker", level = "S"),
-                                             subset(conv, condition = "talker", level = "T"))
-get_combined_frequency_table(t_xcorr_talker_paired, t_conv_talker_paired, title = "Table 8. Talker")
-
-# Paired t-tests for meaning
-t_xcorr_meaning_paired <- get_paired_samples_t(subset(xcorr, condition = "meaning", level = "M"),
-                                               subset(xcorr, condition = "meaning", level = "N"))
-t_conv_meaning_paired <- get_paired_samples_t(subset(conv, condition = "meaning", level = "M"),
-                                              subset(conv, condition = "meaning", level = "N"))
-get_combined_frequency_table(t_xcorr_meaning_paired, t_conv_meaning_paired, title = "Table 9. Meaning")
-
-# Paired t-tests for constraint
-t_xcorr_constraint_paired <- get_paired_samples_t(subset(xcorr, condition = "constraint", level = "S"),
-                                                  subset(xcorr, condition = "constraint", level = "G"))
-t_conv_constraint_paired <- get_paired_samples_t(subset(conv, condition = "constraint", level = "S"),
-                                                 subset(conv, condition = "constraint", level = "G"))
-get_combined_frequency_table(t_xcorr_constraint_paired, t_conv_constraint_paired, title = "Table 10. Constraint")
-```
-
-
-**Table 11. *p*-values for each level in each condition ($\alpha$ < 0.1, )**
-
-```{r}
-# Creating a table to display all the p-values
-spacer <- matrix(" ", 128, 1)
-level_p_values <- data.frame(channels, 
-                     t_xcorr_talker_s$p,
-                     t_xcorr_talker_t$p, 
-                     t_xcorr_talker_paired$p,
-                     spacer,
-                     t_xcorr_meaning_m$p,
-                     t_xcorr_meaning_n$p, 
-                     t_xcorr_meaning_paired$p,
-                     spacer,
-                     t_xcorr_constraint_s$p,
-                     t_xcorr_constraint_g$p,
-                     t_xcorr_constraint_paired$p)  %>%
-  mutate_if(is.numeric, function(x) {round(x, digits = 3)}) %>%
-  mutate_if(is.numeric, function(x) {ifelse(x > 0.1, 
-                                            cell_spec(x, NULL),
-                                            cell_spec(x, background = spec_color(x, 
-                                                                                 direction = 1, 
-                                                                                 begin = 0.65, 
-                                                                                 end = 1, 
-                                                                                 option = "B", 
-                                                                                 scale_from = c(0,0.1))))})
-
-# kable(level_p_values)
-kable(level_p_values, escape = F, col.names = c("Channel", "S", "T", "Paired", "---",
-                                                "M", "N", "Paired", "---",
-                                                "S", "G", "Paired")) %>%
-  add_header_above(c(" " = 1, "Talker" = 3, " "  = 1, "Meaning" = 3, " " = 1, "Constraint" = 3)) %>%
-  kable_styling(bootstrap_options = c("hover", "condensed"), full_width = F)
-```
-
-**Table 12. Channels that distinguish between levels in a condition ($\alpha$ < 0.1)** The *condition diff* column contains channels that significantly distinguish between the two levels in a condition. The *match x* columns for individual levels indicate channels that significantly track the stimuli in the condition level. The *match both* column indicates channels that both distinguish between levels and significantly track stimuli under both levels. Differences between the *match x* columns in each condition show differences between the networks tracking speech under each condition level.
-
-```{r}
-# Creating a table to display all the channels that are significant for each condition level
-talker_diff <- get_hot(t_xcorr_talker_paired)
-talker_s_match <- get_match(talker_diff, get_hot(t_xcorr_talker_s))
-talker_t_match <- get_match(talker_diff, get_hot(t_xcorr_talker_t))
-talker_both_match <- get_match(talker_s_match, talker_t_match)
-
-meaning_diff <- get_hot(t_xcorr_meaning_paired)
-meaning_m_match <- get_match(meaning_diff, get_hot(t_xcorr_meaning_m))
-meaning_n_match <- get_match(meaning_diff, get_hot(t_xcorr_meaning_n))
-meaning_both_match <- get_match(meaning_m_match, meaning_n_match)
-
-constraint_diff <- get_hot(t_xcorr_constraint_paired)
-constraint_s_match <- get_match(constraint_diff, get_hot(t_xcorr_constraint_s))
-constraint_g_match <- get_match(constraint_diff, get_hot(t_xcorr_constraint_g))
-constraint_both_match <- get_match(constraint_s_match, constraint_g_match)
-
-match_table <- data.frame(channels, 
-                          talker_s_match, talker_t_match, talker_diff, talker_both_match,
-                          meaning_m_match, meaning_n_match, meaning_diff, meaning_both_match,
-                          constraint_s_match, constraint_g_match, constraint_diff, constraint_both_match) %>%
-  mutate_if(is.numeric, function(x) {ifelse(x == 1, 
-                                            cell_spec(x, background = "tomato"), 
-                                            cell_spec(x, NULL))})
-
-kable(match_table, escape = F, col.names = c("Channel", 
-                                             "match s", "match t", "diff", "match both",
-                                             "match m", "match n", "diff", "match both",
-                                             "match s", "match g", "diff", "match both"))  %>%
-  add_header_above(c(" " = 1, "Talker" = 4, "Meaning" = 4, "Constraint" = 4)) %>%
-  kable_styling(bootstrap_options = c("hover", "condensed"), full_width = F)
-```
-
-**Table 13. Number of conditions that distinguish by each channel ($\alpha$ < 0.1)**
-
-```{r}
-# Creating a table to display all the channels that are significant for two condition levels
-total <- cbind(talker_diff, meaning_diff, constraint_diff) %>% apply(MARGIN = 1, sum)
-counts <- margin.table(table(total), 1)
-proportions <- prop.table(table(total))
-df <- data.frame("counts" = c(counts[1], counts[2], counts[3]), "proportion" = c(proportions[1], proportions[2], proportions[3]))
-row.names(df) <- c("No conditions", "One condition", "Two conditions")
-kable(df) %>% kable_styling(c("striped", "condensed"), full_width = F)
-```
-
-
-
-
-************
-
-#### 4. Are the brain organizations different in different conditions related to tracking?
 
 
 
