--- a/src/main_analysis.Rmd
+++ b/src/main_analysis.Rmd
@@ -9,12 +9,12 @@ output:
 ```{r setup, include=FALSE}
 require("knitr")
 library("dplyr")
+library("kableExtra")
 setwd('~/src/talker_change_data_processing')
 source("src/main_analysis_functions.R")
 knitr::opts_chunk$set(
   echo = FALSE,
-  warning = FALSE,
-  root.dir = '~/src/talker_change_data_processing'
+  warning = FALSE
 ) 
 ```
 
@@ -29,6 +29,8 @@ channel_columns <- paste("X", 1:128, sep = "")
 ```
 
 
+
+
 ******
 
 #### 1. Do cortical regions track temporal variation in the speech signal?
@@ -36,7 +38,6 @@ channel_columns <- paste("X", 1:128, sep = "")
 ``` {r}
 # One-sample t-test for the cross-correlation values for each channel
 t_xcorr <- get_one_sample_t(select(xcorr, all_of(channel_columns)))
-# Create a frequency table with the results
 get_frequency_table(t_xcorr, title = "Table 1. Channels significantly tracking the stimuli")
 ```
 
@@ -56,35 +57,34 @@ t_xcorr[which(t_xcorr$p < 0.1),]
 
 Tested by one-sample t-tests for significant waveform tracking in each level of each condition.
 
-**Channels significantly tracking the stimuli in the talker condition ($\alpha$ < 0.1)** 
+**Table 2. Channels significantly tracking the stimuli in the talker condition ($\alpha$ < 0.1)** 
 
 ```{r}
 # One-sample t-tests over each electrode for the same talker condition
-t_xcorr_talker_s <- get_one_sample_t(subset(xcorr, condition = "talker", level = "S"))
-# get_frequency_table(t_xcorr_talker_s, title = "Table 2. Same talker")
-t_xcorr_talker_t <- get_one_sample_t(subset(xcorr, condition = "talker", level = "T"))
-get_combined_frequency_table(t_xcorr_talker_s, t_xcorr_talker_t, 
-                             title = "Table 3. Talker", group1 = "Same talker", group2 = "Different talker")
+t_talker_s <- get_one_sample_t(subset(xcorr, condition = "talker", level = "S"))
+t_talker_t <- get_one_sample_t(subset(xcorr, condition = "talker", level = "T"))
+table <- get_combined_frequency_table(t_talker_s, t_talker_t)
+add_header_above(table, c(" ", "Same talker" = 2, "Different talker" = 2))
 ```
 
-**Channels significantly tracking the stimuli in the meaning condition ($\alpha$ < 0.1)** 
+**Table 3. Channels significantly tracking the stimuli in the meaning condition ($\alpha$ < 0.1)** 
 
 ```{r}
 # One-sample t-tests over each electrode for the meaning condition
-t_xcorr_meaning_m <- get_one_sample_t(subset(xcorr, condition = "meaning", level = "M"))
-t_xcorr_meaning_n <- get_one_sample_t(subset(xcorr, condition = "meaning", level = "N"))
-get_combined_frequency_table(t_xcorr_meaning_m, t_xcorr_meaning_n, 
-                             title = "Table 4. Nonsense", group1 = "Meaningful", group2 = "Nonsense")
+t_meaning_m <- get_one_sample_t(subset(xcorr, condition = "meaning", level = "M"))
+t_meaning_n <- get_one_sample_t(subset(xcorr, condition = "meaning", level = "N"))
+table <- get_combined_frequency_table(t_meaning_m, t_meaning_n)
+add_header_above(table, c(" ", "Meaningful" = 2, "Nonsense" = 2))
 ```
 
-**Channels significantly tracking the stimuli in the constraint condition ($\alpha$ < 0.1)** 
+**Table 4. Channels significantly tracking the stimuli in the constraint condition ($\alpha$ < 0.1)** 
 
 ```{r}
 # One-sample t-tests over each electrode for the high constraint condition
-t_xcorr_constraint_s <- get_one_sample_t(subset(xcorr, condition = "constraint", level = "S"))
-t_xcorr_constraint_g <- get_one_sample_t(subset(xcorr, condition = "constraint", level = "G"))
-get_combined_frequency_table(t_xcorr_constraint_s, t_xcorr_constraint_g, 
-                             title = "Table 5. Low constraint", group1 = "High constraint", group2 = "Low constraint")
+t_constraint_s <- get_one_sample_t(subset(xcorr, condition = "constraint", level = "S"))
+t_constraint_g <- get_one_sample_t(subset(xcorr, condition = "constraint", level = "G"))
+table <- get_combined_frequency_table(t_constraint_s, t_constraint_g)
+add_header_above(table, c(" ", "High constraint" = 2, "Low constraint" = 2))
 ```
 
 
@@ -100,19 +100,19 @@ Tested by paired-samples t-tests between the two levels of each condition. I.e. 
 
 ```{r}
 # Paired t-tests for talker
-t_xcorr_talker_paired <- get_paired_samples_t(subset(xcorr, condition = "talker", level = "S"),
+t_talker_paired <- get_paired_samples_t(subset(xcorr, condition = "talker", level = "S"),
                                               subset(xcorr, condition = "talker", level = "T"))
-get_frequency_table(t_xcorr_talker_paired, title = "Table 8. Talker")
+get_frequency_table(t_talker_paired, title = "Table 8. Talker")
 
 # Paired t-tests for meaning
-t_xcorr_meaning_paired <- get_paired_samples_t(subset(xcorr, condition = "meaning", level = "M"),
+t_meaning_paired <- get_paired_samples_t(subset(xcorr, condition = "meaning", level = "M"),
                                                subset(xcorr, condition = "meaning", level = "N"))
-get_frequency_table(t_xcorr_meaning_paired, title = "Table 9. Meaning")
+get_frequency_table(t_meaning_paired, title = "Table 9. Meaning")
 
 # Paired t-tests for constraint
-t_xcorr_constraint_paired <- get_paired_samples_t(subset(xcorr, condition = "constraint", level = "S"),
+t_constraint_paired <- get_paired_samples_t(subset(xcorr, condition = "constraint", level = "S"),
                                                   subset(xcorr, condition = "constraint", level = "G"))
-get_frequency_table(t_xcorr_constraint_paired, title = "Table 10. Constraint")
+get_frequency_table(t_constraint_paired, title = "Table 10. Constraint")
 ```
 
 
@@ -122,17 +122,17 @@ get_frequency_table(t_xcorr_constraint_paired, title = "Table 10. Constraint")
 # Creating a table to display all the p-values
 spacer <- matrix(" ", 128, 1)
 level_p_values <- data.frame(channels, 
-                     t_xcorr_talker_s$p,
-                     t_xcorr_talker_t$p, 
-                     t_xcorr_talker_paired$p,
+                     t_talker_s$p,
+                     t_talker_t$p, 
+                     t_talker_paired$p,
                      spacer,
-                     t_xcorr_meaning_m$p,
-                     t_xcorr_meaning_n$p, 
-                     t_xcorr_meaning_paired$p,
+                     t_meaning_m$p,
+                     t_meaning_n$p, 
+                     t_meaning_paired$p,
                      spacer,
-                     t_xcorr_constraint_s$p,
-                     t_xcorr_constraint_g$p,
-                     t_xcorr_constraint_paired$p)  %>%
+                     t_constraint_s$p,
+                     t_constraint_g$p,
+                     t_constraint_paired$p)  %>%
   mutate_if(is.numeric, function(x) {round(x, digits = 3)}) %>%
   mutate_if(is.numeric, function(x) {ifelse(x > 0.1, 
                                             cell_spec(x, NULL),
@@ -155,19 +155,19 @@ kable(level_p_values, escape = F, col.names = c("Channel", "S", "T", "Paired", "
 
 ```{r}
 # Creating a table to display all the channels that are significant for each condition level
-talker_diff <- get_hot(t_xcorr_talker_paired)
-talker_s_match <- get_match(talker_diff, get_hot(t_xcorr_talker_s))
-talker_t_match <- get_match(talker_diff, get_hot(t_xcorr_talker_t))
+talker_diff <- get_hot(t_talker_paired)
+talker_s_match <- get_match(talker_diff, get_hot(t_talker_s))
+talker_t_match <- get_match(talker_diff, get_hot(t_talker_t))
 talker_both_match <- get_match(talker_s_match, talker_t_match)
 
-meaning_diff <- get_hot(t_xcorr_meaning_paired)
-meaning_m_match <- get_match(meaning_diff, get_hot(t_xcorr_meaning_m))
-meaning_n_match <- get_match(meaning_diff, get_hot(t_xcorr_meaning_n))
+meaning_diff <- get_hot(t_meaning_paired)
+meaning_m_match <- get_match(meaning_diff, get_hot(t_meaning_m))
+meaning_n_match <- get_match(meaning_diff, get_hot(t_meaning_n))
 meaning_both_match <- get_match(meaning_m_match, meaning_n_match)
 
-constraint_diff <- get_hot(t_xcorr_constraint_paired)
-constraint_s_match <- get_match(constraint_diff, get_hot(t_xcorr_constraint_s))
-constraint_g_match <- get_match(constraint_diff, get_hot(t_xcorr_constraint_g))
+constraint_diff <- get_hot(t_constraint_paired)
+constraint_s_match <- get_match(constraint_diff, get_hot(t_constraint_s))
+constraint_g_match <- get_match(constraint_diff, get_hot(t_constraint_g))
 constraint_both_match <- get_match(constraint_s_match, constraint_g_match)
 
 match_table <- data.frame(channels, 
@@ -186,7 +186,7 @@ kable(match_table, escape = F, col.names = c("Channel",
   kable_styling(bootstrap_options = c("hover", "condensed"), full_width = F)
 ```
 
-**Table 13. Number of conditions that distinguish by each channel ($\alpha$ < 0.1)**
+**Table 13. Number of channels distinguishing between multiple conditions ($\alpha$ < 0.1)**
 
 ```{r}
 # Creating a table to display all the channels that are significant for two condition levels
